added background image and password box/button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <div id="grid">
 
+
+        <form class="code">
+            <input type="text" placeholder="Password" class="textbox">
+            <input type="submit" class="submit-button">
+        </form>
     </div>
 </body>
 </html>
