basic dialog function working

--- a/index.html
+++ b/index.html
@@ -13,8 +13,33 @@
 
         <form class="code">
             <input type="text" placeholder="Password" class="textbox">
+            <br>
             <input type="submit" class="submit-button">
         </form>
     </div>
+
+    <dialog id="clue1">
+        <h1>You found a clue!</h1>
+        <div class="dialog-content">
+            <p>I speak without a mouth, heard but never seen. Outside I am hard to find, yet in a room I am serene.</p>
+            <button id="ok-button1">OK</button>
+        </div>
+    </dialog>
+
+    <dialog id="clue2">
+        <h1>You found a clue!</h1>
+        <div class="dialog-content">
+            <p>In solitude, I am loud, yet in crowds, I am drowned. In your deepest thoughts, I am often found.</p>
+            <button id="ok-button2">OK</button>
+        </div>
+    </dialog>
+
+    <dialog id="false-clue1">
+        <h1>You found a book!</h1>
+        <div class="dialog-content">
+            <p>You dust it off and open it, only to realize it's just a dictionary. Strange... you notice the page is saved at the beginning of the S section.</p>
+            <button id="ok-button3">OK</button>
+        </div>
+    </dialog>
 </body>
 </html>
