--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Our grid will be generated below -->
     <div id="grid">
 
-
+        <!-- Password Area -->
         <form class="code">
             <input id="textbox" type="text" autocomplete="off" placeholder="Password">
             <br>
@@ -43,7 +43,7 @@
         <h1 class="d-title">How to Play</h1>
         <div class="d-content">
             <p>We cordially welcome you to... The House. <br><br>The goal is to figure out what the one-word password is and escape The House! <br><br>Click around the room to search for clues and other interesting items. <br><br>Good Luck! <br><br>P.S. my cat prefers to be left alone.</p>
-            <button id="ok-button">OK</button>
+            <button id="ok-button">PLAY</button>
         </div>
     </dialog>
 
